5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1650_2449.log
== TEST (2019-04-15 13:17:40) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
e = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:18:33) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:19:50) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x < 0):
	m = "Nao tem solucao"
	print(m)
else:
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:20:08) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x < 0):
	m = "Nao tem solucao"
	print(m)
else:
	print(y)
-- EXECUTION TIME:
0.147128
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:21:15) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x < 0):
	print(x)
else:
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:22:23) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x < 0):
	print(y)
else:
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 19:09:14) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x and y < 0):
	print(y)
else:
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 19:10:13) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x and y < 0):
	print(x)
	print(y)
else:
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 19:14:37) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
if(x and y < 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(x and y < 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 19:15:19) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
if(s and s2 < 0):
	s == x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	s2 == y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print(x)
-- ERROR:
File "XXXX", line 8
    s == x = ((c * e) - (b * f)) / ((a * e) - (b * d))
    ^
SyntaxError: can't assign to comparison
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 19:20:00) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
if(x and y < 0):
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print(x)
-- ERROR:
File "XXXX", line 8
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 19:28:48) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
if(x and y < 0):
		x = ((c * e) - (b * f)) / ((a * e) - (b * d))
		y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print(x)
-- ERROR:
File "XXXX", line 10
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 19:29:04) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
if(x and y < 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(x and y < 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 19:29:31) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
if(x and y < 0):
	x == ((c * e) - (b * f)) / ((a * e) - (b * d))
	y == ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(x and y < 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:39:08) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
if(x = ((c * e) - (b * f)) / ((a * e) - (b * d)) , y = ((a * f) - (c * d)) / ((a * e) - (b * d)) ):
	print(x)
	print(y)
else:
	print(x)
-- ERROR:
File "XXXX", line 7
    if(x = ((c * e) - (b * f)) / ((a * e) - (b * d)) , y = ((a * f) - (c * d)) / ((a * e) - (b * d)) ):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:39:35) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
if(x = ((c * e) - (b * f)) / ((a * e) - (b * d)) < 0 , y = ((a * f) - (c * d)) / ((a * e) - (b * d)) < 0 ):
	print(x)
	print(y)
else:
	print(x)
-- ERROR:
File "XXXX", line 7
    if(x = ((c * e) - (b * f)) / ((a * e) - (b * d)) < 0 , y = ((a * f) - (c * d)) / ((a * e) - (b * d)) < 0 ):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:39:48) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
if(x == ((c * e) - (b * f)) / ((a * e) - (b * d)) < 0 , y == ((a * f) - (c * d)) / ((a * e) - (b * d)) < 0 ):
	print(x)
	print(y)
else:
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(x == ((c * e) - (b * f)) / ((a * e) - (b * d)) < 0 , y == ((a * f) - (c * d)) / ((a * e) - (b * d)) < 0 ):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:43:44) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
if(x and y < 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(x and y < 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:44:09) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x and y < 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:44:52) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y < 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:44:59) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y < 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print(x)
-- EXECUTION TIME:
0.189613
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:45:02) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y < 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:45:18) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y < 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.144724
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:45:23) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y < 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.2132
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:45:28) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y < 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:46:44) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y < 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:46:59) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y < 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:51:14) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))

if(x , y < 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(x , y < 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:52:19) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
f1 = ((c * e) - (b * f)) / ((a * e) - (b * d))
f2 = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y < 0):
	f1 == x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	f2 == y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 10
    f1 == x = ((c * e) - (b * f)) / ((a * e) - (b * d))
    ^
SyntaxError: can't assign to comparison
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:52:29) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
f1 = ((c * e) - (b * f)) / ((a * e) - (b * d))
f2 = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y < 0):
	f1 = x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	f2 = y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    f1 = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:53:10) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y < 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:53:36) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y > 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:53:42) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y > 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.176591
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:53:53) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y => 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 9
    if(x , y => 0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:54:00) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y >= 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:54:06) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y >= 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.170611
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 12:54:09) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y >= 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.187051
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:55:55) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y != x/0 , y/0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:47:22) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y > 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 20:47:44) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x , y > 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.16111
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:48:33) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))

if(x , y > 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(x , y > 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 20:48:56) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))

if(x , y > 0):
	x == ((c * e) - (b * f)) / ((a * e) - (b * d))
	y == ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(x , y > 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:17:20) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))

if(x , y > 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(x , y > 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:35:11) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))

if(x , y > 0):
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 9
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:35:29) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))

if(x , y > 0):
	x == ((c * e) - (b * f)) / ((a * e) - (b * d))
	y == ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(x , y > 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:41:10) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x > 0 and y > 0):

	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:42:22) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(x > 0 and y > 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:45:31) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if((a * e) - (b * d) == 0):
	print("Nao tem solucao")

else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:45:41) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if((a * e) - (b * d) == 0):
	print("Nao tem solucao")

else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.214338
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:46:24) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if((a * e) - (b * d)):
	print("Nao tem solucao")

else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:46:50) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if((a * e) - (b * d) == 0.0):
	print("Nao tem solucao")

else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:46:58) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if((a * e) - (b * d) == 0.0):
	print("Nao tem solucao")

else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.148408
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:48:05) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(((a * e) - (b * d)) == 0.0):
	print("Nao tem solucao")

else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:48:13) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(((a * e) - (b * d)) == 0.0):
	print("Nao tem solucao")

else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.130645
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:49:44) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(((a * e) - (b * d)) != 0):
	print(x)
	print(y)

else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:49:50) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(((a * e) - (b * d)) != 0):
	print(x)
	print(y)

else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:49:57) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(((a * e) - (b * d)) != 0):
	print(x)
	print(y)

else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.138032
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:52:24) 
-- CODE:
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))
d = float(input("Digite d: "))
e = float(input("Digite e: "))
f = float(input("Digite f: "))
x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))
if(((a * e) - (b * d)) != 0):
	print(x)
	print(y)

else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:27:12) 
-- CODE:
a = float(input("Digite o coeficiente a: ))
b = float(input("Digite o coeficiente b: ))
c = float(input("Digite o coeficiente c: ))
d = float(input("Digite o coeficiente d: ))
e = float(input("Digite o coeficiente e: ))
f = float(input("Digite o coeficiente f: ))

#x = (c - (b * y)) / a
#y = (f - (d * x)) / e

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if((a * e) - (b * d) !=):
	print(x)
	print(y)
else:
 print("Nao tem solucao")
 

-- ERROR:
File "XXXX", line 1
    a = float(input("Digite o coeficiente a: ))
                                              ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:28:07) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

#x = (c - (b * y)) / a
#y = (f - (d * x)) / e

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if((a * e) - (b * d) !=):
	print(x)
	print(y)
else:
 print("Nao tem solucao")
 

-- ERROR:
File "XXXX", line 14
    if((a * e) - (b * d) !=):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:28:19) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

#x = (c - (b * y)) / a
#y = (f - (d * x)) / e

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if((a * e) - (b * d) != 0):
	print(x)
	print(y)
else:
 print("Nao tem solucao")
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:28:48) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

#x = (c - (b * y)) / a
#y = (f - (d * x)) / e

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if((a * e) - (b * d) != 0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:29:36) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

x = (c - (b * y)) / a
y = (f - (d * x)) / e

if((a * e) - (b * d) != 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c - (b * y)) / a
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:30:10) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

x = ((c - (b * y)) / a)
y = ((f - (d * x)) / e)

if((a * e) - (b * d) != 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c - (b * y)) / a)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:32:33) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if((a * e) - (b * d) != 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:32:41) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

if((a * e) - (b * d) != 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:33:17) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

x = ((c * e) - (b * f)) 
y = ((a * f) - (c * d)) 

if((a * e) - (b * d) != 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
 

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:33:25) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

x = ((c * e) - (b * f)) 
y = ((a * f) - (c * d)) 

if((a * e) - (b * d) != 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
 

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:33:34) 
-- CODE:
a = float(input("Digite o coeficiente a: "))
b = float(input("Digite o coeficiente b: "))
c = float(input("Digite o coeficiente c: "))
d = float(input("Digite o coeficiente d: "))
e = float(input("Digite o coeficiente e: "))
f = float(input("Digite o coeficiente f: "))

x = ((c * e) - (b * f)) 
y = ((a * f) - (c * d)) 

if((a * e) - (b * d) != 0):
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
else:
	print("Nao tem solucao")
 

-- EXECUTION TIME:
0.165887
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
